tests/specs/run/ld_preload/set_with_allow_env.ts
Deno.env.set("LD_PRELOAD", "./libpreload.so");

const output = new Deno.Command("echo").spawn();
